# bp-commit-reflect

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DIRECTORY_STRUCTURE.md  MANIFEST.in  README.md  pyproject.toml  pytest.ini  setup.py
.beads/: issues.jsonl
.claude/skills/beads/references/: WORKFLOWS.md
.config/: commit-reflect.example.json  team-config-template.json
.git-tools/hooks/: post-commit
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: DIRECTORY_STRUCTURE.md  IMPLEMENTATION_PLAN.md  MVP_COMPLETION.md  QUICKSTART.md  REPL_MODE_IMPLEMENTATION.md  TESTING.md  USER_GUIDE.md
docs/adr/: 000-template.md  001-cli-first-architecture.md  002-mcp-integration.md  003-multiple-storage-backends.md  004-interactive-question-flow.md  005-repl-mode-git-hook-integration.md  README.md
examples/: README.md  full-config.json  minimal-config.json  personal-config.json  sample-reflection.jsonl  team-config.json
scripts/: install.sh
